[project]
name = "deep-rl-notebooks"
version = "0.1.0"
description = "Deep Reinforcement Learning examples and notebooks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.1.1",
    "notebook>=7.3.3",
    "pytest>=8.3.5",
    "numpy>=1.25.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "seaborn>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
